# mg5

./: .gitignore  Dockerfile  README.md  config.txt  provision.sh  start_camera_feed.sh
.github/: CODEOWNERS
debian/: Dockerfile  setup_docker.sh
debian/scripts/: setup.sh
display/: display.md  main.py
display/app/: main.qml
docker/: Dockerfile  docker.md
docker/debian/: Dockerfile  README.md  setup_docker.sh
docker/debian/scripts/: setup.sh
docker/scripts/: build_libcamera.sh  install_pyside.sh  setup.sh  setup_ros2.sh
docker/ubuntu/scripts/: setup.sh
docs/: flight.md  provision.md  sbc_provisioning_guide_clean.md  simulation.md
scripts/: exec_mg5x.sh  mg5_exec.sh  provision.sh  setup_docker.sh
services/: README.md  mg5-stream.service  mg5x.service  uxrce-dds.service  var_file
stream/: CMakeLists.txt  README.md  build.sh
stream/src/: main.cpp
tools/: make_di.py  mav_device.py
ubuntu/: Dockerfile  setup_docker.sh
ubuntu/scripts/: setup_libcamera.sh  setup_ros2.sh
